# mcp-servers

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
chart/mcp-server/: Chart.yaml  values.yaml
chart/mcp-server/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml
chart/mcp-server/tests/: deployment_test.yaml  ingress_test.yaml  service_test.yaml
chart/values/: mcp-calendar.yaml  mcp-obsidian.yaml
servers/example/: Dockerfile  README.md  pyproject.toml
servers/example/src/example_server/: server.py
servers/example/tests/: test_server.py
servers/mcp-calendar/: Dockerfile  README.md  pyproject.toml
servers/mcp-calendar/src/mcp_calendar/: backends.py  calendar.py  config.py  server.py  tools.py
servers/mcp-calendar/tests/: test_backends.py  test_config.py  test_server.py  test_tools.py
servers/mcp-obsidian/: .testmondata  Dockerfile  README.md  implementation-plan.md  pyproject.toml
servers/mcp-obsidian/src/mcp_obsidian/: config.py  errors.py  main.py  obsidian.py  server.py  tools.py
servers/mcp-obsidian/src/mcp_obsidian/tasks/: collector.py  mutator.py  parser.py
servers/mcp-obsidian/src/mcp_obsidian/tools/: __init__.py  batch.py  organizing.py  reading.py  registry.py  searching.py  task_tools.py  vault_wide.py  writing.py
servers/mcp-obsidian/src/mcp_obsidian/vault/: __init__.py  frontmatter.py  io.py  links.py  path.py  patterns.py  search.py
servers/mcp-obsidian/tests/: conftest.py  test_obsidian.py  test_tools.py
servers/mcp-obsidian/tests/integration/: test_read_note_integration.py  test_vault_tools_integration.py
servers/mcp-obsidian/tests/unit/: test_batch_tool.py  test_frontmatter.py  test_path.py  test_read_note.py  test_task_collector.py  test_task_mutator.py  test_task_parser.py  test_task_sequencing.py  test_vault_io.py  test_vault_links.py  test_vault_search.py
