[project]
name = "mcp-servers"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["servers/*"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "types-requests>=2.32",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# mcp and example_server ship no py.typed — suppress missing-stub noise
module = ["mcp.*", "mcp", "example_server.*", "example_server"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# mcp's Server decorators (list_tools, call_tool) are untyped at runtime
module = ["mcp_obsidian.server", "example_server.server"]
disallow_untyped_decorators = false
disallow_untyped_calls = false
