[project]
name = "mcp-servers"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["servers/*"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "types-requests>=2.32",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
# importlib mode avoids test-module name collisions across server packages
addopts = "--import-mode=importlib"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# mcp and example_server ship no py.typed — suppress missing-stub noise
module = ["mcp.*", "mcp", "example_server.*", "example_server"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# mcp's Server decorators (list_tools, call_tool) are untyped at runtime
module = ["mcp_obsidian.server", "example_server.server", "mcp_calendar.server"]
disallow_untyped_decorators = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
# caldav and icalendar use lazy imports / are partially typed; disable strict checks
module = ["mcp_calendar.backends"]
ignore_errors = true

[[tool.mypy.overrides]]
# pyyaml ships types-PyYAML separately — suppress missing-stub noise
module = ["yaml", "yaml.*"]
ignore_missing_imports = true
