[project]
name = "mcp-calendar"
version = "0.1.0"
description = "MCP server providing a unified view of iCloud, Gmail, and Nextcloud calendars via CalDAV"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "caldav>=1.3.9",
    "icalendar>=6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9",
]

[project.scripts]
mcp-calendar = "mcp_calendar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_calendar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
