[project]
name = "mcp-obsidian"
version = "0.1.0"
description = "MCP server to interact with Obsidian via the Local REST API plugin"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obsidian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
