[project]
name = "mcp-obsidian"
version = "0.1.0"
description = "MCP server to interact with an existing Obsidian vault"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "python-frontmatter>=1.1.0",
    "pydantic-settings>=2.5.0",
    "PyYAML>=6.0",
    "starlette>=0.46.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obsidian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
